list fixes & iterator created

--- a/TasksList/TasksList.vcxproj.filters
+++ b/TasksList/TasksList.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="TList.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="iteratorTList.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
