--- a/TasksList/TasksList.vcxproj
+++ b/TasksList/TasksList.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="polinom.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="iteratorTList.h" />
     <ClInclude Include="monom.h" />
     <ClInclude Include="polinom.h" />
     <ClInclude Include="TList.h" />
