fix and commit some operators of Polinoms

--- a/Google-tests/Google-tests.vcxproj.filters
+++ b/Google-tests/Google-tests.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="gtest_monom.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="gtest_polinom.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
