--- a/Google-tests/Google-tests.vcxproj
+++ b/Google-tests/Google-tests.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="gtest-all.cc" />
     <ClCompile Include="gtest_list.cpp" />
     <ClCompile Include="gtest_monom.cpp" />
+    <ClCompile Include="gtest_polinom.cpp" />
     <ClCompile Include="test_main.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
