--- a/Google-tests/Google-tests.vcxproj.filters
+++ b/Google-tests/Google-tests.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClCompile Include="gtest_polinom.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="gtest_iterator.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
