--- a/TasksList/TasksList.vcxproj
+++ b/TasksList/TasksList.vcxproj
@@ -129,10 +129,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Model.cpp" />
     <ClCompile Include="polinom.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="iteratorTList.h" />
+    <ClInclude Include="Model.h" />
     <ClInclude Include="monom.h" />
     <ClInclude Include="polinom.h" />
     <ClInclude Include="TList.h" />
