--- a/Visual/Visual.vcxproj
+++ b/Visual/Visual.vcxproj
@@ -120,14 +120,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\TasksList\Model.cpp" />
+    <ClCompile Include="..\TasksList\polinom.cpp" />
     <ClCompile Include="AddMonom.cpp" />
     <ClCompile Include="MyForm.cpp" />
+    <ClCompile Include="PolinomCalculator.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\TasksList\Model.h" />
+    <ClInclude Include="..\TasksList\polinom.h" />
     <ClInclude Include="AddMonom.h">
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="MyForm.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
+    <ClInclude Include="PolinomCalculator.h">
       <FileType>CppForm</FileType>
     </ClInclude>
   </ItemGroup>
@@ -137,6 +145,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm.resx">
       <DependentUpon>MyForm.h</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PolinomCalculator.resx">
+      <DependentUpon>PolinomCalculator.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
