--- a/TasksList/TasksList.vcxproj.filters
+++ b/TasksList/TasksList.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClInclude Include="Model.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="polinomParser.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
