First Version AddMonom, need create parser for polinom calculator.

--- a/Visual/Visual.vcxproj
+++ b/Visual/Visual.vcxproj
@@ -137,7 +137,7 @@
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="PolinomCalculator.h">
-      <FileType>CppHeader</FileType>
+      <FileType>CppForm</FileType>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
