--- a/Visual/Visual.vcxproj
+++ b/Visual/Visual.vcxproj
@@ -120,6 +120,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\mp2-AlgOfList\calc.cpp" />
     <ClCompile Include="..\TasksList\Model.cpp" />
     <ClCompile Include="..\TasksList\polinom.cpp" />
     <ClCompile Include="AddMonom.cpp" />
@@ -127,6 +128,7 @@
     <ClCompile Include="PolinomCalculator.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\mp2-AlgOfList\calc.h" />
     <ClInclude Include="..\TasksList\Model.h" />
     <ClInclude Include="..\TasksList\polinom.h" />
     <ClInclude Include="..\TasksList\polinomParser.h" />
