--- a/Visual/Visual.vcxproj.filters
+++ b/Visual/Visual.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="..\TasksList\polinom.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="..\mp2-AlgOfList\calc.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyForm.h">
@@ -48,6 +51,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="..\TasksList\polinomParser.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="..\mp2-AlgOfList\calc.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
