--- a/mp2-AlgOfList/mp2-AlgOfList.vcxproj.filters
+++ b/mp2-AlgOfList/mp2-AlgOfList.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="baseList.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
     <ClInclude Include="ListStack.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
@@ -27,6 +24,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="calc.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="..\PolinomList\polinom.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
